Make it possible to use any style, for the sufficiently determined

Set KRITA_NO_STYLE_OVERRIDE to something and the currently style
will not be overridden. Since there are some reports that breeze
works now, enable that, too. We can always disable it when it
turns out to be a bad idea.

BUG:361811